admission/validatingAdmissionPolicies/policies/sysctls/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-sysctls-namespace-optout-warn-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 61c33ae9-f1e3-5e45-b347-5e791865e313
  labels:
    allowed-sysctls.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    allowed-sysctls.security.kolteq.com/audit: 'false - true'
    allowed-sysctls.security.kolteq.com/enforce: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-sysctls
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - baseline
        - restricted
      - key: allowed-sysctls.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-sysctls-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 61c33ae9-f1e3-5e45-b347-5e791865e313
  labels:
    allowed-sysctls.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/warn: enabled
    allowed-sysctls.security.kolteq.com/audit: 'false - true'
    allowed-sysctls.security.kolteq.com/enforce: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: allowed-sysctls
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: allowed-sysctls.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-sysctls-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 61c33ae9-f1e3-5e45-b347-5e791865e313
  labels:
    allowed-sysctls.security.kolteq.com/warn: 'false - true'
    allowed-sysctls.security.kolteq.com/audit: 'false - true'
    allowed-sysctls.security.kolteq.com/enforce: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-sysctls
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: allowed-sysctls.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-sysctls-namespace-optout-audit-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 61c33ae9-f1e3-5e45-b347-5e791865e313
  labels:
    allowed-sysctls.security.kolteq.com/audit: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    allowed-sysctls.security.kolteq.com/enforce: 'false - true'
    allowed-sysctls.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-sysctls
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - baseline
        - restricted
      - key: allowed-sysctls.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-sysctls-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 61c33ae9-f1e3-5e45-b347-5e791865e313
  labels:
    allowed-sysctls.security.kolteq.com/audit: 'false - true'
    security.kolteq.com/audit: enabled
    allowed-sysctls.security.kolteq.com/enforce: 'false - true'
    allowed-sysctls.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-sysctls
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: allowed-sysctls.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-sysctls-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 61c33ae9-f1e3-5e45-b347-5e791865e313
  labels:
    allowed-sysctls.security.kolteq.com/audit: 'false - true'
    allowed-sysctls.security.kolteq.com/enforce: 'false - true'
    allowed-sysctls.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-sysctls
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: allowed-sysctls.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-sysctls-namespace-optout-deny-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 61c33ae9-f1e3-5e45-b347-5e791865e313
  labels:
    allowed-sysctls.security.kolteq.com/enforce: 'false - true'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    allowed-sysctls.security.kolteq.com/audit: 'false - true'
    allowed-sysctls.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-sysctls
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - baseline
        - restricted
      - key: allowed-sysctls.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-sysctls-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 61c33ae9-f1e3-5e45-b347-5e791865e313
  labels:
    allowed-sysctls.security.kolteq.com/enforce: 'false - true'
    security.kolteq.com/enforce: enabled
    allowed-sysctls.security.kolteq.com/audit: 'false - true'
    allowed-sysctls.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-sysctls
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: allowed-sysctls.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-sysctls-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 61c33ae9-f1e3-5e45-b347-5e791865e313
  labels:
    allowed-sysctls.security.kolteq.com/enforce: 'false - true'
    allowed-sysctls.security.kolteq.com/audit: 'false - true'
    allowed-sysctls.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-sysctls
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: allowed-sysctls.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
