admission/validatingAdmissionPolicies/policies/sysctls/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: allowed-sysctls
  annotations:
    security.kubeapt.io/displayName: Sysctls
    security.kubeapt.io/description: ValidatingAdmissionPolicy for sysctls.
    security.kubeapt.io/resource: Pods
    security.kubeapt.io/severity: medium
    security.kubeapt.io/remediation: Adjust workloads to satisfy the sysctls policy.
    policies.kolteq.com/validatingAdmissionPolicy: 61c33ae9-f1e3-5e45-b347-5e791865e313
  labels:
    allowed-sysctls.security.kolteq.com/audit: 'false,true'
    allowed-sysctls.security.kolteq.com/enforce: 'false,true'
    allowed-sysctls.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
  variables:
    - name: allowedSysctls
      expression: >
        ["kernel.shm_rmid_forced",
         "net.ipv4.ip_local_port_range",
         "net.ipv4.ip_unprivileged_port_start",
         "net.ipv4.tcp_syncookies",
         "net.ipv4.ping_group_range",
         "net.ipv4.ip_local_reserved_ports",
         "net.ipv4.tcp_keepalive_time",
         "net.ipv4.tcp_fin_timeout",
         "net.ipv4.tcp_keepalive_intvl",
         "net.ipv4.tcp_keepalive_probes"]
  validations:
    - expression: >
        !has(object.spec.securityContext) ||
        !has(object.spec.securityContext.sysctls) ||
        object.spec.securityContext.sysctls.all(s,
          has(s.name) && variables.allowedSysctls.exists(a, a == s.name)
        )
      message: >
        Only the approved sysctls are allowed in spec.securityContext.sysctls[*].name.
        Allowed: kernel.shm_rmid_forced, net.ipv4.ip_local_port_range,
        net.ipv4.ip_unprivileged_port_start, net.ipv4.tcp_syncookies,
        net.ipv4.ping_group_range, net.ipv4.ip_local_reserved_ports,
        net.ipv4.tcp_keepalive_time, net.ipv4.tcp_fin_timeout,
        net.ipv4.tcp_keepalive_intvl, net.ipv4.tcp_keepalive_probes.
